<resources>
    <string name="app_name">Android Academy</string>

    <string name="back">Back</string>

    <string name="channel_new_movies">New movies</string>
    <string name="movie_notification_description">Rating %d/5</string>

    <!--  fragment_movies_details  -->
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="age_restriction">%d+</string>
    <string name="reviews_count">%d reviews</string>
    <!--  fragment_movies_details  -->

    <!--  fragment_movies_list  -->
    <string name="movies_list">Movies list</string>
    <string name="duration">%d min</string>
    <!--  fragment_movies_list  -->
</resources>