<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMoviesList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space_4x">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_left_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_4x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_right_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_4x" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movies_list_title"
            style="@style/movie_list_location_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5x"
            android:drawableStart="@drawable/ic_location_target"
            android:drawablePadding="@dimen/space_3x"
            android:text="@string/movies_list"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movie_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5x"
            android:scaleType="centerInside"
            android:src="@drawable/ic_movie_item_frame"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movies_list_title" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/movie_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:layout_marginTop="@dimen/space_1x"
            android:layout_marginEnd="@dimen/space_1x"
            android:layout_marginBottom="@dimen/space_48"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/movie_frame"
            app:layout_constraintEnd_toEndOf="@id/movie_frame"
            app:layout_constraintStart_toStartOf="@id/movie_frame"
            app:layout_constraintTop_toTopOf="@id/movie_frame"
            app:shapeAppearanceOverlay="@style/corner_size_3_percent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_mask"
            app:layout_constraintBottom_toBottomOf="@id/movie_logo"
            app:layout_constraintEnd_toEndOf="@id/movie_logo"
            app:layout_constraintStart_toStartOf="@id/movie_logo"
            app:layout_constraintTop_toTopOf="@id/movie_logo" />

        <View
            android:id="@+id/age_restriction_frame"
            android:layout_width="@dimen/space_24"
            android:layout_height="@dimen/space_24"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginTop="@dimen/space_3x"
            android:background="@drawable/age_restriction_frame"
            app:layout_constraintStart_toStartOf="@id/movie_logo"
            app:layout_constraintTop_toTopOf="@id/movie_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/age_restriction"
            style="@style/movie_age_restriction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/age_restriction_frame"
            app:layout_constraintEnd_toEndOf="@id/age_restriction_frame"
            app:layout_constraintStart_toStartOf="@id/age_restriction_frame"
            app:layout_constraintTop_toTopOf="@id/age_restriction_frame"
            tools:text="13+" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_3x"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@id/age_restriction_frame"
            app:layout_constraintEnd_toEndOf="@id/movie_logo"
            app:layout_constraintTop_toTopOf="@id/age_restriction_frame" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genres"
            style="@style/movie_list_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginEnd="@dimen/space_3x"
            android:layout_marginBottom="@dimen/space_2x"
            app:layout_constraintBottom_toTopOf="@id/star_1"
            app:layout_constraintEnd_toEndOf="@id/movie_logo"
            app:layout_constraintStart_toStartOf="@id/movie_logo"
            tools:text="Action, Adventure, Drama" />

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="@dimen/space_10"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginTop="@dimen/space_3x"
            android:layout_marginBottom="@dimen/space_3x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/movie_logo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/movie_logo" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="@dimen/space_10"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_1"
            app:layout_constraintTop_toTopOf="@id/star_1" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="@dimen/space_10"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_2"
            app:layout_constraintTop_toTopOf="@id/star_2" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="@dimen/space_10"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_3"
            app:layout_constraintTop_toTopOf="@id/star_3" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="@dimen/space_10"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_4"
            app:layout_constraintTop_toTopOf="@id/star_4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reviews_count"
            style="@style/movie_list_reviews_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_3x"
            android:text="@string/reviews_count"
            app:layout_constraintBottom_toBottomOf="@id/star_5"
            app:layout_constraintEnd_toEndOf="@id/movie_logo"
            app:layout_constraintStart_toEndOf="@id/star_5"
            app:layout_constraintTop_toTopOf="@id/star_5"
            tools:text="125 reviews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movie_title"
            style="@style/movie_list_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginTop="@dimen/space_3x"
            android:layout_marginEnd="@dimen/space_3x"
            android:breakStrategy="balanced"
            app:layout_constraintBottom_toTopOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="@id/movie_frame"
            app:layout_constraintStart_toStartOf="@id/movie_frame"
            app:layout_constraintTop_toBottomOf="@id/movie_logo"
            tools:text="Avengers: End Game" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/duration"
            style="@style/movie_list_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginEnd="@dimen/space_3x"
            android:layout_marginBottom="@dimen/space_3x"
            android:text="@string/duration"
            app:layout_constraintBottom_toBottomOf="@id/movie_frame"
            app:layout_constraintEnd_toEndOf="@id/movie_frame"
            app:layout_constraintStart_toStartOf="@id/movie_frame"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            tools:text="137 min" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>