<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space_4x">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_left_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_4x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_right_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_4x" />

        <ImageView
            android:id="@+id/movie_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_details_logo"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_mask"
            app:layout_constraintBottom_toBottomOf="@id/movie_logo"
            app:layout_constraintEnd_toEndOf="@id/movie_logo"
            app:layout_constraintStart_toStartOf="@id/movie_logo"
            app:layout_constraintTop_toTopOf="@id/movie_logo" />

        <TextView
            android:id="@+id/btn_back"
            style="@style/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5x"
            android:drawablePadding="@dimen/space_3x"
            app:drawableStartCompat="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            style="@style/movie_details_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:breakStrategy="balanced"
            app:layout_constraintBottom_toBottomOf="@id/movie_logo"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_logo"
            tools:text="Avengers: End Game" />

        <TextView
            android:id="@+id/age_restriction"
            style="@style/movie_age_restriction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_3x"
            app:layout_constraintBottom_toTopOf="@+id/movie_title"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            tools:text="13+" />

        <TextView
            android:id="@+id/genres"
            style="@style/movie_details_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            tools:text="Action, Adventure, Fantasy" />
        
        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_3x"
            android:src="@drawable/ic_star"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/genres" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_1"
            app:layout_constraintTop_toTopOf="@id/star_1" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_2"
            app:layout_constraintTop_toTopOf="@id/star_2" />

        <ImageView
            android:id="@+id/star_4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_3"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_3"
            app:layout_constraintTop_toTopOf="@id/star_3" />

        <ImageView
            android:id="@+id/star_5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_1x"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/star_4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/star_4"
            app:layout_constraintTop_toTopOf="@id/star_4" />

        <TextView
            android:id="@+id/reviews_count"
            style="@style/movie_details_reviews_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:text="@string/reviews_count"
            app:layout_constraintBottom_toBottomOf="@id/star_5"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/star_5"
            app:layout_constraintTop_toTopOf="@+id/star_5"
            tools:text="125 reviews" />

        <TextView
            android:id="@+id/storyline_block_title"
            style="@style/movie_details_block_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:text="@string/storyline"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/reviews_count" />

        <TextView
            android:id="@+id/movie_storyline"
            style="@style/movie_details_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3x"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/storyline_block_title"
            tools:text="After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe." />

        <TextView
            android:id="@+id/cast_block_title"
            style="@style/movie_details_block_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:text="@string/cast"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_storyline" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/actor_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_3x"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/actor_2"
            app:layout_constraintStart_toStartOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/cast_block_title"
            app:shapeAppearanceOverlay="@style/corner_size_8_percent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/actor_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_3x"
            app:layout_constraintBottom_toBottomOf="@id/actor_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/actor_3"
            app:layout_constraintStart_toEndOf="@id/actor_1"
            app:layout_constraintTop_toTopOf="@id/actor_1"
            app:shapeAppearanceOverlay="@style/corner_size_8_percent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/actor_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_3x"
            app:layout_constraintBottom_toBottomOf="@id/actor_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/actor_4"
            app:layout_constraintStart_toEndOf="@id/actor_2"
            app:layout_constraintTop_toTopOf="@id/actor_1"
            app:shapeAppearanceOverlay="@style/corner_size_8_percent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/actor_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/space_3x"
            app:layout_constraintBottom_toBottomOf="@id/actor_1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/actor_3"
            app:layout_constraintTop_toTopOf="@id/actor_1"
            app:shapeAppearanceOverlay="@style/corner_size_8_percent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/actor_1_name"
            style="@style/movie_details_actor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:breakStrategy="balanced"
            app:layout_constraintEnd_toEndOf="@id/actor_1"
            app:layout_constraintStart_toStartOf="@id/actor_1"
            app:layout_constraintTop_toBottomOf="@id/actor_1"
            tools:text="Robert Downey Jr." />

        <TextView
            android:id="@+id/actor_2_name"
            style="@style/movie_details_actor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:breakStrategy="balanced"
            app:layout_constraintEnd_toEndOf="@id/actor_2"
            app:layout_constraintStart_toStartOf="@id/actor_2"
            app:layout_constraintTop_toBottomOf="@id/actor_2"
            tools:text="Chris Evans" />

        <TextView
            android:id="@+id/actor_3_name"
            style="@style/movie_details_actor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:breakStrategy="balanced"
            app:layout_constraintEnd_toEndOf="@id/actor_3"
            app:layout_constraintStart_toStartOf="@id/actor_3"
            app:layout_constraintTop_toBottomOf="@id/actor_3"
            tools:text="Mark Ruffalo" />

        <TextView
            android:id="@+id/actor_4_name"
            style="@style/movie_details_actor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:breakStrategy="balanced"
            app:layout_constraintEnd_toEndOf="@id/actor_4"
            app:layout_constraintStart_toStartOf="@id/actor_4"
            app:layout_constraintTop_toBottomOf="@id/actor_4"
            tools:text="Chris Hemsworth" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>